...
        android:layout_height="225dp"
        app:cornerRadius = "15dp"
        app:srcCompat="@drawable/uscid"
        />
        <TextView
...
                        android:onClick="currResOuterToggle"
                        android:clickable="true"
                        android:id="@+id/currresoutertoggle"
                        android:layout_width="14dp"
                        android:layout_height="15dp"
...
                    android:visibility="visible"
                    android:layout_width="match_parent"
                    android:id = "@+id/currentreservationbox"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="10dp"
...
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/currentreservationtoggle"
                            android:layout_width="14dp"
                            android:layout_height="15dp"
...
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/CurrResName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Taper Hall"
                                android:textStyle="bold"
                                android:gravity="left"
...
                                android:layout_width="280dp"
                                android:orientation="vertical"
                                android:id="@+id/currresinfo"
                                android:visibility="gone"
                                android:layout_height="wrap_content">
...
                                        app:cornerRadius="6dp" />
                                    <Button
                                        android:id="@+id/buttonCancelReservation"
                                        android:layout_width="130dp"
                                        android:padding="0dp"
...
                                        android:minWidth="0dp"
                                        android:onClick="cancelReservation"
                                        android:text="Cancel Reservation"
                                        app:cornerRadius="6dp" />
                                </LinearLayout>
...
                        android:layout_height="15dp"
                        android:layout_marginLeft="215dp"
                        android:id="@+id/pastrestoggle"
                        android:clickable="true"
                        android:onClick="pastResToggle"
...
                        app:cardElevation="10dp"
                        app:cardCornerRadius="9dp"
                        android:id = "@+id/pastbox9"
                        android:visibility="gone"
                        android:layout_height="wrap_content">
...
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/pasttoggle9"
                                android:clickable="true"
                                android:onClick="pastResToggle9"
...
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/pastname9"
                                    android:text="Taper Hall"
                                    android:textStyle="bold"
...
                                </TextView>
                                <LinearLayout
                                    android:id="@+id/pasttext9"
                                    android:visibility="gone"
                                    android:layout_width="280dp"
...
                                    android:layout_height="wrap_content">
                                    <TextView
                                        android:id="@+id/paststatus9"
                                        android:layout_marginTop="5dp"
                                        android:layout_width="wrap_content"
...
                                        android:fontFamily="@font/dmsans"/>
                                    <TextView
                                        android:id="@+id/pasttime9"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
...
                                        android:fontFamily="@font/dmsans"/>
                                    <TextView
                                        android:id="@+id/pastlocation9"
                                        android:layout_marginBottom="5dp"
                                        android:layout_width="wrap_content"
...

        <ImageView
            android:id="@+id/nav2"
            android:layout_width="205dp"
            android:layout_height="100dp"
...
