...
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:text="Log In" />
    <TextView
        android:id="@+id/idtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="left"
...
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:theme="@style/LoginTextInputLayoutStyle"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:fontFamily="@font/dmsans"
...
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:visibility="invisible"
        android:text="No account found for the ID and password provided. Please retype your username and password or sign up." />

    <Button
        android:id="@+id/buttonLogIn"
        style="@style/Button.Purple"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:backgroundTint="#8A00C2"
        android:text="Log In"
        android:textStyle="bold"
...
