<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:backgroundTint="#F9F9F9"
    android:backgroundTintMode="add"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/backarrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        app:srcCompat="@drawable/back"
        android:clickable="true"
        android:onClick="toMainScreen"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-25dp"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:text="Sign Up" />
    <ImageView
        android:id="@+id/profpic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/profpic"
        android:clickable="true"
        android:onClick="addPicture"
        />
    <TextView
        android:id="@+id/proftext"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:textColor="#8A00C2"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/dmsans"
        android:clickable="true"
        android:onClick="addPicture"
        android:text="Add Profile Photo" />
    <View
        android:layout_width="113dp"
        android:layout_height="1dp"
        android:id="@+id/separator"
        android:visibility="visible"
        android:background="#8A00C2"/>
    <TextView
        android:id="@+id/nametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:text="Name" />




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/name"
        android:theme="@style/LoginTextInputLayoutStyle"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:fontFamily="@font/dmsans"
            android:layout_gravity="center_horizontal"
             />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/idtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:text="USC ID" />




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:theme="@style/LoginTextInputLayoutStyle"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/uscid"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:fontFamily="@font/dmsans"
            android:layout_gravity="center_horizontal"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/affiliationtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:text="USC Affiliation" />




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:theme="@style/LoginTextInputLayoutStyle"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/affiliation"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:fontFamily="@font/dmsans"
            android:layout_gravity="center_horizontal"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/passtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:text="Password" />




    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:theme="@style/LoginTextInputLayoutStyle"
        style="@style/LoginTextInputLayoutStyle"
        app:boxBackgroundColor="#f9f9f9"
        android:id="@+id/password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:fontFamily="@font/dmsans"
            android:layout_gravity="center_horizontal"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/errorText"
        android:layout_marginTop="-5dp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#990000"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:visibility="invisible"
        android:text="Please correct the boxes/text highlighted in red to submit." />

    <Button
        android:id="@+id/buttonLogIn"
        style="@style/Button.Purple"
        android:layout_width="267dp"
        android:layout_height="48dp"
        android:backgroundTint="#8A00C2"
        android:text="Sign Up"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans"
        android:layout_marginTop="10dp"
        android:onClick="submitSignUp"
        app:cornerRadius="10dp" />
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="20dp">
        <TextView
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmsans"
            android:text="Already have an account?" />
        <TextView

            android:textColor="#8A00C2"
            android:paddingLeft="10dp"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="14sp"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="toLoginScreen"
            android:fontFamily="@font/dmsans"
            android:text="Log In" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/nav1"
            android:layout_width="205dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/navbar1"
            android:onClick="toMapScreen"/>

        <ImageView
            android:id="@+id/nav2"
            android:layout_width="205dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/navbarprof2"
            android:onClick="toProfileScreen"/>
    </LinearLayout>


</LinearLayout>